finalize config overhaul close #285 close #322 close #309