@@ -37,8 +37,8 @@ public class ConfigLoader {
                 .stream().map(DifficultyFeatures::valueOf).toList();
         Config.CommonConfig.featureBlacklist = featureList.isEmpty() ? EnumSet.noneOf(DifficultyFeatures.class) : EnumSet.copyOf(featureList);
         List<String> blacklist = ConfigSpecs.COMMON_CONF.entityBlacklist.get();
-        if (blacklist.size() != 1 || !blacklist.getFirst().equals("UNINIT"))
-            Config.CommonConfig.entityBlacklist.readFromString(ConfigSpecs.COMMON_CONF.entityBlacklist.get());
+        if (blacklist.size() != 1 || !blacklist.getFirst().equals("UNINITIALIZED"))
+            Config.CommonConfig.entityBlacklist.read(ConfigSpecs.COMMON_CONF.entityBlacklist.get());
         featureList = ConfigSpecs.COMMON_CONF.featureWhitelist.get()
                 .stream().map(DifficultyFeatures::valueOf).toList();
         Config.CommonConfig.featureWhitelist = featureList.isEmpty() ? EnumSet.noneOf(DifficultyFeatures.class) : EnumSet.copyOf(featureList);
@@ -104,9 +104,9 @@ public class ConfigLoader {
 
     public static void serverInit(ServerLevel world) {
         List<? extends String> l = ConfigSpecs.COMMON_CONF.entityBlacklist.get();
-        if (l.size() == 1 && l.get(0).equals("UNINITIALIZED")) {
+        if (l.size() == 1 && l.getFirst().equals("UNINITIALIZED")) {
             Config.CommonConfig.entityBlacklist.initDefault(world);
-            ConfigSpecs.COMMON_CONF.entityBlacklist.set(Config.CommonConfig.entityBlacklist.writeToString());
+            ConfigSpecs.COMMON_CONF.entityBlacklist.set(Config.CommonConfig.entityBlacklist.write());
             ConfigSpecs.COMMON_CONF.entityBlacklist.save();
         }
     }
